# Projet-FAR-Server

./: .gitignore  CMakeLists.txt  README.md  client  client.c  main.c  scriptServer.sh  server  server.c
Client/: CMakeLists.txt  client.c
Client/lib/: command.txt
Client/lib/headers/: client.h
Client/lib/src/: commandClient.c
Question 1/: client  server
Question 2/: client  client.c  colors.c  colors.h  command.h  command.txt  fileServer.c  fileServer.h  infos.txt  list.c  list.h  liste.c  role.h  scriptClient.sh  scriptServer.sh  scriptUser.sh  sema.c  sema.h  server  server.c  server.h  stringFunc.c  stringFunc.h  user  user.c  user.h
Question 2/Client/: client  client.c  fileUser.h  scriptClient.sh  scriptUser.sh  stringFunc.c  user  user.c  user.h
Question 2/Client/lib/: colors.c  colors.h  command.txt  commandUser.c  commandUser.h  fileUser.c  fileUser.h  user.h
Question 2/Client/lib/headers/: commandClient.h  list.h  (+2 more)
Question 2/server/: CMakeLists.txt  colors.c  role.c  scriptServer.sh  server  server.c  server.h  stringFunc.h
Question 2/server/lib/: admin.c  censorship_words.txt  colors.h  commandServer.c  commandServer.h  fileServer.c  fileServer.h  sema.c  server.h
Server/lib/headers/: chanel.h
Server/lib/src/: admin.c  sema.c
lib/: censorship_words.txt
lib/headers/: admin.h  channel.h  colors.h  commandServer.h  fileServer.h  form.h  list.h  sema.h  server.h  stringFunc.h  tools.h
lib/src/: admin.c  channel.c  channelList.c  colors.c  commandServer.c  fileServer.c  form.c  formList.c  list.c  sema.c  server.c  stringFunc.c  tools.c
(+22 files in other folders)
